--- a/contact.html
+++ b/contact.html
@@ -200,7 +200,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h3>Newsletter</h3>
 				</div>
 				<div class="footer-text">
-					<p>By subscribing to our mailing list you will always get latest news and updates from us.</p>
+					<p>
+                                           Подписавшись на нашу рассылку, вы всегда будете получать от нас последние новости и обновления.
+                                        </p>
 					<form action="#" method="post">
 						<input type="email" name="Email" placeholder="Enter your email..." required="">
 						<button class="btn1"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
