--- a/services.html
+++ b/services.html
@@ -322,7 +322,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                            Подписавшись на нашу рассылку, вы всегда будете получать от нас последние новости и обновления.
                                         </p>
 					<form action="#" method="post">
-						<input type="email" name="Email" placeholder="Enter your email..." required="">
+						<input type="email" name="Email" placeholder=" Введите адрес электронной почты... " required="">
 						<button class="btn1"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
 						<div class="clearfix"> </div>
 					</form>
