--- a/about.html
+++ b/about.html
@@ -4,8 +4,7 @@
 <title>Новый поворот</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
-<meta name="keywords" content="Grand Tour Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<meta name="keywords" content="туры выходного дня 'Новый поворот'" />
 
     <script>
         addEventListener("load", function () {
@@ -42,12 +41,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
 			<input type="checkbox" id="drop" />
 			<ul class="menu ml-auto mt-1">
-				<li class=""><a href="index.html">Home</a></li>
-				<li class="active"><a href="about.html">About Us</a></li>
-				<li class=""><a href="services.html">Services</a></li>
-				<li class=""><a href="packages.html">Packages</a></li>
-				<li class=""><a href="contact.html">Contact</a></li>
-				<li class="booking"><a href="booking.html">Book Now</a></li>
+				<li class=""><a href="index.html">Главная</a></li>
+				<li class="active"><a href="about.html"> О Нас </a></li>
+				<li class=""><a href="services.html">Сервисы</a></li>
+				<li class=""><a href="packages.html">Туры</a></li>
+				<li class=""><a href="contact.html">Контакты</a></li>
+				<li class="booking"><a href="booking.html">Забронируйте сейчас</a></li>
 			</ul>
 		</nav>
 		<!-- //nav -->
