--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<input type="checkbox" id="drop" />
 			<ul class="menu ml-auto mt-1">
 				<li class=""><a href="index.html">Главная</a></li>
-				<li class="active"><a href="about.html"> О Нас </a></li>
+				<li class=""><a href="about.html"> О Нас </a></li>
 				<li class=""><a href="services.html">Сервисы</a></li>
 				<li class=""><a href="packages.html">Туры</a></li>
-				<li class=""><a href="contact.html">Контакты</a></li>
+				<li class="active"><a href="contact.html">Контакты</a></li>
 				<li class="booking"><a href="booking.html">Забронируйте сейчас</a></li>
 			</ul>
 		</nav>
