--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
 			<input type="checkbox" id="drop" />
 			<ul class="menu ml-auto mt-1">
-				<li class=""><a href="index.html">Главная</a></li>
-				<li class="active"><a href="about.html"> О Нас </a></li>
+				<li class="active"><a href="index.html">Главная</a></li>
+				<li class=""><a href="about.html"> О Нас </a></li>
 				<li class=""><a href="services.html">Сервисы</a></li>
 				<li class=""><a href="packages.html">Туры</a></li>
 				<li class=""><a href="contact.html">Контакты</a></li>
