--- a/index.html
+++ b/index.html
@@ -161,28 +161,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="counter">
 					<span class="fa fa-smile-o"></span>
 					<div class="timer count-title count-number">1000+</div>
-					<p class="count-text text-uppercase">happy customers</p>
+					<p class="count-text text-uppercase">ДОВОЛЬНЫЕ КЛИЕНТЫ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-ship"></span>
 					<div class="timer count-title count-number">2271</div>
-					<p class="count-text text-uppercase">Tours & Travels </p>
+					<p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-users"></span>
 					<div class="timer count-title count-number">200</div>
-					<p class="count-text text-uppercase">destinations</p>
+					<p class="count-text text-uppercase">НАПРАВЛЕНИЯ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-gift"></span>
-					<div class="timer count-title count-number">20+<span>years</span></div>
-					<p class="count-text text-uppercase">experience</p>
+					<div class="timer count-title count-number">20+<span>лет</span></div>
+					<p class="count-text text-uppercase">ОПЫТА</p>
 				</div>
 			</div>
 		</div>
@@ -193,14 +193,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- how to book -->
 <section class="book py-5">
 	<div class="container py-lg-5 py-sm-3">
-		<h2 class="heading text-capitalize text-center"> How To Plan Your Trip</h2>
+		<h2 class="heading text-capitalize text-center">Как Спланировать Поездку</h2>
 		<div class="row mt-5 text-center">
 			<div class="col-lg-4 col-sm-6">
 				<div class="grid-info">
 					<div class="icon">
 						<span class="fa fa-map-signs"></span>
 					</div>
-					<h4>Pick Destination</h4>
+					<h4>ВЫБЕРИТЕ ПУНКТ НАЗНАЧЕНИЯ</h4>
 					<p class="mt-3">Vestibulum urna ligula, molestie at ante ut, finibus. Integer ultrices finibus sed nisi in convallis sed dolor.</p>
 				</div>
 			</div>
@@ -209,7 +209,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="icon">
 						<span class="fa fa-calendar"></span>
 					</div>
-					<h4>Select Date</h4>
+					<h4> ВЫБЕРИТЕ ДАТУ </h4>
 					<p class="mt-3">Vestibulum urna ligula, molestie at ante ut, finibus. Integer ultrices finibus sed nisi in convallis sed dolor.</p>
 				</div>
 			</div>
@@ -218,7 +218,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="icon">
 						<span class="fa fa-gift"></span>
 					</div>
-					<h4>Enjoy the Trip</h4>
+					<h4>НАСЛАЖДАЙТЕСЬ ПОЕЗДКОЙ</h4>
 					<p class="mt-3">Vestibulum urna ligula, molestie at ante ut, finibus. Integer ultrices finibus sed nisi in convallis sed dolor.</p>
 				</div>
 			</div>
@@ -230,7 +230,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- tour packages -->
 <section class="packages py-5">
 	<div class="container py-lg-4 py-sm-3">
-		<h3 class="heading text-capitalize text-center"> Discover our tour packages</h3>
+		<h3 class="heading text-capitalize text-center"> Откройте Для Себя Наши Туры</h3>
 		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
 		<div class="row">
 			<div class="col-lg-3 col-sm-6">
@@ -291,7 +291,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 		<div class="view-package text-center mt-4">
-			<a href="packages.html">View All Packages</a>
+			<a href="packages.html">Просмотреть все туры</a>
 		</div>
 	</div>
 </section>
@@ -302,12 +302,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="overlay-inner py-5">
 		<div class="container py-md-3">
 			<div class="test-info">
-				<h4 class="tittle">Enjoy The Trip</h4>
+				<h4 class="tittle">Наслаждайтесь Поездкой</h4>
 				<p class="mt-3">Duis nisi sapien, elementum finibus fermentum eget, aliquet leo et. Mauris hendrerit vel ex. Quisque vitae luctus massa.
 				Phasellus sed aliquam leo a massa eu fringilla. Integer ultrices finibus sed nisi. in convallis felis dapibus
 				sit amet.</p>
 				<div class="text-left mt-4">
-						<a href="booking.html">Book Now</a>
+						<a href="booking.html">Забронируйте Сейчас</a>
 				</div>
 			</div>
 		</div>
@@ -318,7 +318,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- destinations -->
 <section class="destinations py-5" id="destinations">
 	<div class="container py-xl-5 py-lg-3">
-		<h3 class="heading text-capitalize text-center"> Popular Destinations</h3>
+		<h3 class="heading text-capitalize text-center"> Популярные Направления</h3>
 		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
 		<div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
@@ -417,7 +417,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="row footer-top">
 			<div class="col-lg-3 col-sm-6 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Address</h3>
+					<h3>Адрес</h3>
 				</div>
 				<div class="footer-text">
 					<p>Location : 1234 lock, Charlotte, North Carolina, United States</p>
@@ -428,7 +428,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 footer-grid_section mt-sm-0 mt-4">
 				<div class="footer-title">
-					<h3>About Us</h3>
+					<h3>О нас</h3>
 				</div>
 				<div class="footer-text">
 					<p>Vivamus magna justo, laci niats eget consectetur sed, conval lis at tellus. Nulla quis lorem ipnt libero.
@@ -443,7 +443,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Travel Places</h3>
+					<h3>Места для путешествий</h3>
 				</div>
 				<div class="row">
 					<ul class="col-6 links">
@@ -465,7 +465,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Newsletter</h3>
+					<h3>Новостная рассылка</h3>
 				</div>
 				<div class="footer-text">
 					<p>
