--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<h3 class="text-wh">Never let your memories be greater than your dreams.</h3>
 								<h4 class="text-wh">tristique senectus et netus et malesuada</h4>
 								<div class="buttons mt-4">
-									<a href="about.html" class="btn mr-2">About Us</a>
-									<a href="booking.html" class="btn">Book a Tour</a>
+									<a href="about.html" class="btn mr-2">О Нас</a>
+									<a href="booking.html" class="btn">Заказать Тур</a>
 								</div>
 							</div>
 						</div>
@@ -89,8 +89,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<h3 class="text-wh">It is better to travel than to arrive. Let's Be Adventurers.</h3>
 								<h4 class="text-wh">tristique senectus et netus et malesuada</h4>
 								<div class="buttons mt-4">
-									<a href="about.html" class="btn mr-2">About Us</a>
-									<a href="booking.html" class="btn">Book a Tour</a>
+									<a href="about.html" class="btn mr-2">О Нас</a>
+									<a href="booking.html" class="btn">Заказать Тур</a>
 								</div>
 							</div>
 						</div>
@@ -105,8 +105,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<h3 class="text-wh">Never let your memories be greater than your dreams.</h3>
 								<h4 class="text-wh">tristique senectus et netus et malesuada</h4>
 								<div class="buttons mt-4">
-									<a href="about.html" class="btn mr-2">About Us</a>
-									<a href="booking.html" class="btn">Book a Tour</a>
+									<a href="about.html" class="btn mr-2">О Нас</a>
+									<a href="booking.html" class="btn">Заказать Тур</a>
 								</div>
 							</div>
 						</div>
@@ -121,8 +121,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<h3 class="text-wh">It is better to travel than to arrive. Let's Be Adventurers.</h3>
 								<h4 class="text-wh">tristique senectus et netus et malesuada</h4>
 								<div class="buttons mt-4">
-									<a href="about.html" class="btn mr-2">About Us</a>
-									<a href="booking.html" class="btn">Book a Tour</a>
+									<a href="about.html" class="btn mr-2">О Нас</a>
+									<a href="booking.html" class="btn">Заказать Тур</a>
 								</div>
 							</div>
 						</div>
