--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="overlay">
 						<div class="container">
 							<div class="w3layouts-banner-info">
-								<h3 class="text-wh">Never let your memories be greater than your dreams.</h3>
+								<h3 class="text-wh">Никогда не позволяйте своим воспоминаниям быть лучше, чем ваши мечты. </h3>
 								<h4 class="text-wh">tristique senectus et netus et malesuada</h4>
 								<div class="buttons mt-4">
 									<a href="about.html" class="btn mr-2">О Нас</a>
@@ -86,7 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="overlay">
 						<div class="container">
 							<div class="w3layouts-banner-info">
-								<h3 class="text-wh">It is better to travel than to arrive. Let's Be Adventurers.</h3>
+								<h3 class="text-wh">Лучше путешествовать, чем приезжать. Будем авантюристами.</h3>
 								<h4 class="text-wh">tristique senectus et netus et malesuada</h4>
 								<div class="buttons mt-4">
 									<a href="about.html" class="btn mr-2">О Нас</a>
@@ -102,7 +102,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="overlay">
 						<div class="container">
 							<div class="w3layouts-banner-info">
-								<h3 class="text-wh">Never let your memories be greater than your dreams.</h3>
+								<h3 class="text-wh">Никогда не позволяйте своим воспоминаниям быть лучше, чем ваши мечты.</h3>
 								<h4 class="text-wh">tristique senectus et netus et malesuada</h4>
 								<div class="buttons mt-4">
 									<a href="about.html" class="btn mr-2">О Нас</a>
@@ -118,7 +118,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="overlay1">
 						<div class="container">
 							<div class="w3layouts-banner-info">
-								<h3 class="text-wh">It is better to travel than to arrive. Let's Be Adventurers.</h3>
+								<h3 class="text-wh">Лучше путешествовать, чем приезжать. Будем авантюристами.</h3>
 								<h4 class="text-wh">tristique senectus et netus et malesuada</h4>
 								<div class="buttons mt-4">
 									<a href="about.html" class="btn mr-2">О Нас</a>
