--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 				<li class=""><a href="services.html">Сервисы</a></li>
 				<li class=""><a href="packages.html">Туры</a></li>
 				<li class=""><a href="contact.html">Контакты</a></li>
-				<li class="booking"><a href="booking.html">Забронируйте сейчас</a></li>
+				<li class="booking"><a href="booking.html">Забронировать</a></li>
 			</ul>
 		</nav>
 		<!-- //nav -->
