--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<li class="active"><a href="services.html">Сервисы</a></li>
 				<li class=""><a href="packages.html">Туры</a></li>
 				<li class=""><a href="contact.html">Контакты</a></li>
-				<li class="booking"><a href="booking.html">Забронируйте сейчас</a></li>
+				<li class="booking"><a href="booking.html">Забронировать</a></li>
 			</ul>
 		</nav>
 		<!-- //nav -->
