--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
 						<h4>Malaysia</h4>
-						<a href="booking.html">Book Now</a>
+						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
 			</div>
@@ -380,7 +380,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
 						<h4>Japan</h4>
-						<a href="booking.html">Book Now</a>
+						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
 			</div>
@@ -401,7 +401,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
 						<h4>Singapore</h4>
-						<a href="booking.html">Book Now</a>
+						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
 			</div>
