--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<p class="text mt-2 mb-5 text-center">Vestibulum tellus neque, sodales vel mauris at, rhoncus finibus augue. Vestibulum urna ligula, molestie at ante ut, finibus vulputate felis.</p>
 		<div class="row inner-sec-w3layouts-w3pvt-lauinfo">
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-				<h4 class="destination mb-3">China</h4>
+				<h4 class="destination mb-3">Китай</h4>
 				<div class="image-position position-relative">
 					<img src="images/china.jpg" class="img-fluid" alt="">
 					<div class="rating">
@@ -337,13 +337,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>China</h4>
-						<a href="booking.html">Book Now</a>
+						<h4>Китай</h4>
+						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center">
-				<h4 class="destination mb-3">Malaysia</h4>
+				<h4 class="destination mb-3">Малайзия</h4>
 				<div class="image-position position-relative">
 					<img src="images/malaysia.jpg" class="img-fluid" alt="">
 					<div class="rating">
@@ -358,13 +358,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>Malaysia</h4>
+						<h4>Малайзия</h4>
 						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-				<h4 class="destination mb-3">Japan</h4>
+				<h4 class="destination mb-3">Япония</h4>
 				<div class="image-position position-relative">
 					<img src="images/japan.jpg" class="img-fluid" alt="">
 					<div class="rating">
@@ -379,13 +379,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>Japan</h4>
+						<h4>Япония</h4>
 						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-6 destinations-grids text-center mt-md-0 mt-4">
-				<h4 class="destination mb-3">Singapore</h4>
+				<h4 class="destination mb-3">Сингапур</h4>
 				<div class="image-position position-relative">
 					<img src="images/singapore.jpg" class="img-fluid" alt="">
 					<div class="rating">
@@ -400,7 +400,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="destinations-info">
 					<div class="caption mb-lg-3">
-						<h4>Singapore</h4>
+						<h4>Сингапур</h4>
 						<a href="booking.html">Забронировать</a>
 					</div>
 				</div>
