--- a/index.html
+++ b/index.html
@@ -160,28 +160,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-smile-o"></span>
-					<div class="timer count-title count-number">1000+</div>
+					<div class="timer count-title count-number num">1000+</div>
 					<p class="count-text text-uppercase">ДОВОЛЬНЫЕ КЛИЕНТЫ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-ship"></span>
-					<div class="timer count-title count-number">2271</div>
+					<div class="timer count-title count-number num">2271</div>
 					<p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-users"></span>
-					<div class="timer count-title count-number">200</div>
+					<div class="timer count-title count-number num">200</div>
 					<p class="count-text text-uppercase">НАПРАВЛЕНИЯ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-gift"></span>
-					<div class="timer count-title count-number">20+<span>лет</span></div>
+					<div class="timer count-title count-number num">20+<span>лет</span></div>
 					<p class="count-text text-uppercase">ОПЫТА</p>
 				</div>
 			</div>
@@ -498,6 +498,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!-- move top -->
 
-	
+	<!-- Animation number -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
+    <script>
+       $(".num").counterUp({delay:10,time:1000});
+    </script>	
 </body>
 </html>
