--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-smile-o"></span>
-					<div class="timer count-title count-number num">100<span>+</span></div>
+					<div class="timer count-title count-number num"><span class="num">100</span>+</div>
 					<p class="count-text text-uppercase">ДОВОЛЬНЫЕ КЛИЕНТЫ</p>
 				</div>
 			</div>
@@ -181,7 +181,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-gift"></span>
-					<div class="timer count-title count-number num">7<span>+лет</span></div>
+					<div class="timer count-title count-number num"><span class="num">7</span>+лет</div>
 					<p class="count-text text-uppercase">ОПЫТА</p>
 				</div>
 			</div>
