--- a/index.html
+++ b/index.html
@@ -160,28 +160,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-smile-o"></span>
-					<div class="timer count-title count-number"><span class="num">100</span>+</div>
+					<div class="timer count-title count-number benefits__number">100</div>
 					<p class="count-text text-uppercase">ДОВОЛЬНЫЕ КЛИЕНТЫ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-ship"></span>
-					<div class="timer count-title count-number num">12</div>
+					<div class="timer count-title count-number benefits__number">12</div>
 					<p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-users"></span>
-					<div class="timer count-title count-number num">12</div>
+					<div class="timer count-title count-number benefits__number">12</div>
 					<p class="count-text text-uppercase">НАПРАВЛЕНИЯ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-gift"></span>
-					<div class="timer count-title count-number"><span class="num">7</span>+лет</div>
+					<div class="timer count-title count-number benefits__number">7</div>
 					<p class="count-text text-uppercase">ОПЫТА</p>
 				</div>
 			</div>
@@ -498,12 +498,41 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!-- move top -->
 	<!-- jQuery CDN -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<!-- Animation number -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
-    <script>
-       $(".num").counterUp({delay:10,time:1000});
+   <script src="./js/jquery.spincrement.min.js"></script>
+   <script>
+	    $(document).ready(function(){
+		    $('.benefits__number').spincrement({
+			thousandSeparator: "",
+			duration: 1200
+		    });
+	    });
+	    
+	    
+	    $(document).ready(function () {
+ 
+	    var show = true;
+	    var countbox = ".benefits__inner";
+	    $(window).on("scroll load resize", function () {
+		if (!show) return false; // Отменяем показ анимации, если она уже была выполнена
+		var w_top = $(window).scrollTop(); // Количество пикселей на которое была прокручена страница
+		var e_top = $(countbox).offset().top; // Расстояние от блока со счетчиками до верха всего документа
+		var w_height = $(window).height(); // Высота окна браузера
+		var d_height = $(document).height(); // Высота всего документа
+		var e_height = $(countbox).outerHeight(); // Полная высота блока со счетчиками
+		if (w_top + 500 >= e_top || w_height + w_top == d_height || e_height + e_top < w_height) {
+			    $('.benefits__number').css('opacity', '1');
+			    $('.benefits__number').spincrement({
+				thousandSeparator: "",
+				duration: 1200
+			    });
+
+			    show = false;
+			}
+		    });
+
+		});
     </script>	
 </body>
 </html>
