--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<!-- Animation number -->
    <script src="./js/jquery.spincrement.min.js"></script>
+   <script src="./js/custom.js"></script>
    <script>
 	    $(document).ready(function(){
 		    $('.benefits__number').spincrement({
