--- a/index.html
+++ b/index.html
@@ -160,28 +160,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-smile-o"></span>
-					<div class="timer count-title count-number benefits__number">100</div>
+					<div class="timer count-title count-number number" data-max="100">+</div>
 					<p class="count-text text-uppercase">ДОВОЛЬНЫЕ КЛИЕНТЫ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-ship"></span>
-					<div class="timer count-title count-number benefits__number">12</div>
+					<div class="timer count-title count-number number" data-max="12"></div>
 					<p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-users"></span>
-					<div class="timer count-title count-number benefits__number">12</div>
+					<div class="timer count-title count-number number" data-max="12"></div>
 					<p class="count-text text-uppercase">НАПРАВЛЕНИЯ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-gift"></span>
-					<div class="timer count-title count-number benefits__number">7</div>
+					<div class="timer count-title count-number number" data-max="7">+</div>
 					<p class="count-text text-uppercase">ОПЫТА</p>
 				</div>
 			</div>
@@ -497,35 +497,59 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</a>
 </div>
 <!-- move top -->
+	
 	<!-- jQuery CDN -->
    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<!-- Animation number -->
-   <script src="./js/jquery.spincrement.min.js"></script>
-   <script src="./js/custom.js"></script>
+  
    <script>
-	    $(document).ready(function () {
- 
-	    var show = true;
-	    var countbox = ".benefits__inner";
-	    $(window).on("scroll load resize", function () {
-		if (!show) return false; // Отменяем показ анимации, если она уже была выполнена
-		var w_top = $(window).scrollTop(); // Количество пикселей на которое была прокручена страница
-		var e_top = $(countbox).offset().top; // Расстояние от блока со счетчиками до верха всего документа
-		var w_height = $(window).height(); // Высота окна браузера
-		var d_height = $(document).height(); // Высота всего документа
-		var e_height = $(countbox).outerHeight(); // Полная высота блока со счетчиками
-		if (w_top + 500 >= e_top || w_height + w_top == d_height || e_height + e_top < w_height) {
-			    $('.benefits__number').css('opacity', '1');
-			    $('.benefits__number').spincrement({
-				thousandSeparator: "",
-				duration: 1200
-			    });
-
-			    show = false;
+	    {
+	let inTheView = Symbol.for("inTheView");
+	let multiplier = Symbol.for("multiplier");
+	
+	// Создадим новое событие, которое выстреливает, когда счётчик становится видимым
+	
+	for(let element of document.querySelectorAll(".scrolling")) {
+		element.addEventListener("scroll", event => {
+			for(let numberElement of element.querySelectorAll(".number")) {
+				let y = (element.scrollTop - numberElement.offsetTop + element.offsetHeight) / (element.offsetHeight);
+				let isInTheView = y > 0 && y < 1;
+				
+				if(numberElement[inTheView] !== isInTheView) {
+					numberElement[inTheView] = isInTheView;
+					
+					if(isInTheView)
+						numberElement.dispatchEvent(new Event("number:visible", { bubbles: true }));
+				}
 			}
-		    });
-
 		});
+	}
+	
+	// обработка нового события
+	addEventListener("number:visible", event => {
+		loop.call(event.target);
+		console.log(event.target[inTheView]);
+	});
+	
+	// анимация цифр запускается, когда срабатывает новое событие
+	function loop() {
+		if(this[multiplier] === 1) {
+			this[multiplier] = null;
+			return;
+		};
+		
+		if(typeof this[multiplier] !== "number") {
+			this[multiplier] = 0;
+			this["dateStart"] = performance.now();
+		}
+		
+		this[multiplier] = Math.min((performance.now() - this.dateStart) / 750, 1);
+		this.style.setProperty("--value", (this[multiplier] * this.getAttribute("data-max") | 0));
+		
+		requestAnimationFrame(loop.bind(this));
+	}
+};
+		
     </script>	
 </body>
 </html>
