--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 	<!-- //google fonts -->
-	
+	<style>
+		.number::after {
+			background: rebeccapurple;
+			color: white;
+			border-radius: 50%;
+			padding: 2em;
+			counter-reset: number var(--value);
+			content: counter(number);
+		}
+	</style>
 </head>
 <body>
 
