--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<style>
 		.number::after {
 			background: rebeccapurple;
-			color: white;
+			color: red;
 			border-radius: 50%;
 			padding: 2em;
 			counter-reset: number var(--value);
