--- a/index.html
+++ b/index.html
@@ -29,16 +29,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<link href="//fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 	<link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 	<!-- //google fonts -->
-	<style>
-		.number::after {
-			background: rebeccapurple;
-			color: red;
-			border-radius: 50%;
-			padding: 2em;
-			counter-reset: number var(--value);
-			content: counter(number);
-		}
-	</style>
+	
 </head>
 <body>
 
@@ -169,28 +160,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-smile-o"></span>
-					<div class="timer count-title count-number number" data-max="100">+</div>
+					<div class="timer count-title count-number num">100</div>
 					<p class="count-text text-uppercase">ДОВОЛЬНЫЕ КЛИЕНТЫ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-ship"></span>
-					<div class="timer count-title count-number number" data-max="12"></div>
+					<div class="timer count-title count-number num">12</div>
 					<p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-users"></span>
-					<div class="timer count-title count-number number" data-max="12"></div>
+					<div class="timer count-title count-number num">12</div>
 					<p class="count-text text-uppercase">НАПРАВЛЕНИЯ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-gift"></span>
-					<div class="timer count-title count-number number" data-max="7">+</div>
+					<div class="timer count-title count-number num">7</div>
 					<p class="count-text text-uppercase">ОПЫТА</p>
 				</div>
 			</div>
@@ -510,55 +501,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- jQuery CDN -->
    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	<!-- Animation number -->
-  
-   <script>
-	    {
-	let inTheView = Symbol.for("inTheView");
-	let multiplier = Symbol.for("multiplier");
-	
-	// Создадим новое событие, которое выстреливает, когда счётчик становится видимым
-	
-	for(let element of document.querySelectorAll(".scrolling")) {
-		element.addEventListener("scroll", event => {
-			for(let numberElement of element.querySelectorAll(".number")) {
-				let y = (element.scrollTop - numberElement.offsetTop + element.offsetHeight) / (element.offsetHeight);
-				let isInTheView = y > 0 && y < 1;
-				
-				if(numberElement[inTheView] !== isInTheView) {
-					numberElement[inTheView] = isInTheView;
-					
-					if(isInTheView)
-						numberElement.dispatchEvent(new Event("number:visible", { bubbles: true }));
-				}
-			}
-		});
-	}
-	
-	// обработка нового события
-	addEventListener("number:visible", event => {
-		loop.call(event.target);
-		console.log(event.target[inTheView]);
-	});
-	
-	// анимация цифр запускается, когда срабатывает новое событие
-	function loop() {
-		if(this[multiplier] === 1) {
-			this[multiplier] = null;
-			return;
-		};
-		
-		if(typeof this[multiplier] !== "number") {
-			this[multiplier] = 0;
-			this["dateStart"] = performance.now();
-		}
-		
-		this[multiplier] = Math.min((performance.now() - this.dateStart) / 750, 1);
-		this.style.setProperty("--value", (this[multiplier] * this.getAttribute("data-max") | 0));
-		
-		requestAnimationFrame(loop.bind(this));
-	}
-};
-		
-    </script>	
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
+  <script>
+       $(".num").counterUp({delay:10,time:1000});
+  </script>	
 </body>
 </html>
