--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="counter">
 					<span class="fa fa-gift"></span>
 					<div class="count-title count-number"><span class="timer num">7</span></div>
-					<p class="count-text text-uppercase">ОПЫТА</p>
+					<p class="count-text text-uppercase">ЛЕТ ОПЫТА</p>
 				</div>
 			</div>
 		</div>
