--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             window.scrollTo(0, 1);
         }
     </script>
-	
+	<!-- Number animation -->
+    <script>
+       $(".num").counterUp({delay:10,time:1000});
+    </script>
 	<!-- css files -->
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' /><!-- bootstrap css -->
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
@@ -503,9 +506,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- Animation number -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
-  <script>
-       $(".num").counterUp({delay:10,time:700});
-  </script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	
 </body>
