--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- how to book -->
 <section class="book py-5">
 	<div class="container py-lg-5 py-sm-3">
-		<h2 class="heading text-capitalize text-center">Как Спланировать Поездку</h2>
+		<h2 class="heading text-capitalize text-center" data-aos="zoom-out-up">Как Спланировать Поездку</h2>
 		<div class="row mt-5 text-center">
 			<div class="col-lg-4 col-sm-6">
 				<div class="grid-info">
