--- a/index.html
+++ b/index.html
@@ -160,28 +160,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-smile-o"></span>
-					<div class="timer num">100</div>
+					<div class="timer count-title count-number benefits__number">100</div>
 					<p class="count-text text-uppercase">ДОВОЛЬНЫЕ КЛИЕНТЫ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-ship"></span>
-					<div class="count-title count-number"><span class="timer num">12</span></div>
+					<div class="timer count-title count-number benefits__number">12</div>
 					<p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-users"></span>
-					<div class="count-title count-number"><span class="timer num">12</span></div>
+					<div class="timer count-title count-number benefits__number">12</div>
 					<p class="count-text text-uppercase">НАПРАВЛЕНИЯ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-gift"></span>
-					<div class="count-title count-number"><span class="timer num">7</span></div>
+					<div class="timer count-title count-number benefits__number">7</div>
 					<p class="count-text text-uppercase">ЛЕТ ОПЫТА</p>
 				</div>
 			</div>
@@ -500,18 +500,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	
 	<!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-	<!-- Animation number -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
-	<!-- Number animation -->
-  <script>
-       jQuery(document).ready(function($) {
-          $('.num').counterUp({
-	      delay: 10,
-	      time: 700
-            });
-       });
-  </script>
+  <script src="./js/jquery.spincrement.min.js"></script>
+  <script src="./js/custom.js"></script>
+  
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
          AOS.init({
