--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
 	<!-- //css files -->
-	
+	<!-- aos.css files -->
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<!-- //aos.css files -->
 	<link href="css/css_slider.css" type="text/css" rel="stylesheet" media="all">
 
 	<!-- google fonts -->
