--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 	<div class="container py-lg-5 py-sm-4">
 		<div class="row">
 			<div class="col-lg-6 about-left">
-				<h3 class="mt-lg-3">We will take you to the Top destination in the world, <strong>Explore with us!</strong></h3>
+				<h3 class="mt-lg-3">Мы Отвезем Вас В Лучшие Места Мира,  <strong>Путешествуйте Вместе С Нами!</strong></h3>
 				<p class="mt-4">Duis nisi sapien, elementum finibus fermentum eget, aliquet leo et. Mauris hendrerit vel ex.
 				Quisque vitae luctus massa. Phasellus sed aliquam leo. Vestibulum ullamcorper a massa eu fringilla. Integer ultrices finibus sed nisi.
 				in convallis felis dapibus sit amet.</p>
