--- a/index.html
+++ b/index.html
@@ -162,28 +162,28 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-smile-o"></span>
-					<div class="timer count-title count-number benefits__number">100</div>
+					<div class="timer count-title count-number"><p class="benefits__number">100</p></div>
 					<p class="count-text text-uppercase">ДОВОЛЬНЫЕ КЛИЕНТЫ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-ship"></span>
-					<div class="timer count-title count-number benefits__number">12</div>
+					<div class="timer count-title count-number"><p class="benefits__number">12</p></div>
 					<p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-users"></span>
-					<div class="timer count-title count-number benefits__number">12</div>
+					<div class="timer count-title count-number"><p class="benefits__number">12</p></div>
 					<p class="count-text text-uppercase">НАПРАВЛЕНИЯ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-gift"></span>
-					<div class="timer count-title count-number benefits__number">7</div>
+					<div class="timer count-title count-number"><p class="benefits__number">7</p></div>
 					<p class="count-text text-uppercase">ЛЕТ ОПЫТА</p>
 				</div>
 			</div>
