--- a/about.html
+++ b/about.html
@@ -115,33 +115,33 @@
 <section class="choose" id="choose">
 	<div class="overlay-all py-5">
 		<div class="container py-lg-5 py-sm-4">
-			<h2 class="heading text-capitalize text-center mb-lg-5 mb-4"> Why Choose Us</h2>
+			<h2 class="heading text-capitalize text-center mb-lg-5 mb-4">Почему Выбрали Нас</h2>
 			<div class="edu-exp-grids">
 				<div class="tab-main">
 					<input id="tab1" type="radio" name="tabs" class="w3pvt-sm" checked>
-					<label for="tab1">We Offer</label>
+					<label for="tab1">Мы предлагаем</label>
 					<input id="tab2" type="radio" class="w3pvt-sm" name="tabs">
-					<label for="tab2">We provide</label>
+					<label for="tab2">Мы предоставляем</label>
 					<section id="content1">
 						<div class="row text-center">
 							<div class="col-lg-4 col-md-6 inner-w3pvt-wrap">
 								<div class="inner-sec-grid">
 									<span class="fa fa-gift"></span>
-									<h4 class="mt-md-4 mt-2">Winter Tours</h4>
+									<h4 class="mt-md-4 mt-2">Зимние Туры</h4>
 									<p class="mt-3">Lorem ipsum dolor sit amet, conse ctetur elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
 								</div>
 							</div>
 							<div class="col-lg-4 col-md-6 inner-w3pvt-wrap">
 								<div class="inner-sec-grid">
 									<span class="fa fa-gift"></span>
-									<h4 class="mt-md-4 mt-2">Accomodation</h4>
+									<h4 class="mt-md-4 mt-2">Размещение</h4>
 									<p class="mt-3">Lorem ipsum dolor sit amet, conse ctetur elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
 								</div>
 							</div>
 							<div class="col-lg-4 col-md-6 inner-w3pvt-wrap">
 								<div class="inner-sec-grid">
 									<span class="fa fa-gift"></span>
-									<h4 class="mt-md-4 mt-2">Low Prices</h4>
+									<h4 class="mt-md-4 mt-2">Низкие Цены</h4>
 									<p class="mt-3">Lorem ipsum dolor sit amet, conse ctetur elit. Cras lobortis mollis arcu, vel vulputate justo.</p>
 								</div>
 							</div>
