--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
 <!-- testimonials -->
 <section class="testimonials py-5" id="testi">
 	<div class="container py-lg-5 py-md-3">
-			<h3 class="heading text-capitalize text-center mb-lg-5 mb-4"> What Our Customers Say</h3>
+			<h3 class="heading text-capitalize text-center mb-lg-5 mb-4">Что Говорят Наши Клиенты</h3>
 		<div class="row pt-xl-4">
 			<div class="col-md-4 test-grid px-lg-4">
 				<div class="testi-info text-center">
@@ -224,7 +224,7 @@
 		<div class="row footer-top">
 			<div class="col-lg-3 col-sm-6 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Address</h3>
+					<h3>Адрес</h3>
 				</div>
 				<div class="footer-text">
 					<p>Location : 1234 lock, Charlotte, North Carolina, United States</p>
@@ -235,7 +235,7 @@
 			</div>
 			<div class="col-lg-3 col-sm-6 footer-grid_section mt-sm-0 mt-4">
 				<div class="footer-title">
-					<h3>About Us</h3>
+					<h3>О нас</h3>
 				</div>
 				<div class="footer-text">
 					<p>Vivamus magna justo, laci niats eget consectetur sed, conval lis at tellus. Nulla quis lorem ipnt libero.
@@ -250,7 +250,7 @@
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Travel Places</h3>
+					<h3>Места для путешествий</h3>
 				</div>
 				<div class="row">
 					<ul class="col-6 links">
@@ -272,7 +272,7 @@
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Newsletter</h3>
+					<h3>Новостная рассылка</h3>
 				</div>
 				<div class="footer-text">
 					<p>
