--- a/about.html
+++ b/about.html
@@ -82,29 +82,29 @@
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-smile-o"></span>
-					<div class="timer count-title count-number">1000+</div>
-					<p class="count-text text-uppercase">happy customers</p>
+					<div class="timer count-title count-number number1" data-max="500">100</div>
+					<p class="count-text text-uppercase">ДОВОЛЬНЫЕ КЛИЕНТЫ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-ship"></span>
-					<div class="timer count-title count-number">2271</div>
-					<p class="count-text text-uppercase">Tours & Travels </p>
+					<<div class="timer count-title count-number number2" data-max="12">10</div>
+					<p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-users"></span>
-					<div class="timer count-title count-number">200</div>
-					<p class="count-text text-uppercase">destinations</p>
+					<div class="timer count-title count-number number3" data-max="10">8</div>
+					<p class="count-text text-uppercase">НАПРАВЛЕНИЯ</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-6 mt-lg-0 mt-5">
 				<div class="counter">
 					<span class="fa fa-gift"></span>
-					<div class="timer count-title count-number">20+<span>years</span></div>
-					<p class="count-text text-uppercase">experience</p>
+					<div class="timer count-title count-number number4" data-max="7">5</div>
+					<p class="count-text text-uppercase">ЛЕТ ОПЫТА</p>
 				</div>
 			</div>
 		</div>
