--- a/services.html
+++ b/services.html
@@ -65,10 +65,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- services -->
 <section class="services pt-5">
 	<div class="container py-lg-5 py-sm-3">
-		<h2 class="heading text-capitalize text-center mb-lg-5 mb-4"> Our Services</h2>
+		<h2 class="heading text-capitalize text-center mb-lg-5 mb-4">Наши Сервисы</h2>
 		<div class="row">
 			<div class="col-lg-3 main-title-text">
-				<h4 class="my-lg-4 mb-4">The journey of a thousand miles begins with a single step.</h4>
+				<h4 class="my-lg-4 mb-4">Путешествие В Тысячу Миль Начинается С Одного Шага.</h4>
 				<img src="images/p1.jpg" alt="" class="img-fluid" />
 			</div>
 			<div class="col-lg-9 mt-lg-0 mt-5">
@@ -79,7 +79,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<span class="fa fa-building" aria-hidden="true"></span>
 							</div>
 							<div class="ser-sevice-grid">
-							  <h4 class="pb-3">Accomodation</h4>
+							  <h4 class="pb-3">Размещение</h4>
 							  <p>Duis nisi sapien, elementum et finibus et fermen eget, aliquet etleo. Mauris vel ex.</p>
 							</div>
 					  </div>
@@ -90,7 +90,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<span class="fa fa-free-code-camp" aria-hidden="true"></span>
 							</div>
 							<div class="ser-sevice-grid">
-								<h4 class="pb-3">Winter Tours</h4>
+								<h4 class="pb-3">Зимние туры</h4>
 							  <p>Duis nisi sapien, elementum et finibus et fermen eget, aliquet etleo. Mauris vel ex.</p>
 							</div>
 						</div>
@@ -101,7 +101,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<span class="fa fa-users" aria-hidden="true"></span>
 							</div>
 							<div class="ser-sevice-grid">
-								<h4 class="pb-3">Exp Agents</h4>
+								<h4 class="pb-3">Агенты</h4>
 							  <p>Duis nisi sapien, elementum et finibus et fermen eget, aliquet etleo. Mauris vel ex.</p>
 							</div>
 						</div>
@@ -112,7 +112,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<span class="fa fa-money" aria-hidden="true"></span>
 							</div>
 							<div class="ser-sevice-grid">
-								<h4 class="pb-3">Low Prices</h4>
+								<h4 class="pb-3">Низкие цены</h4>
 							  <p>Duis nisi sapien, elementum et finibus et fermen eget, aliquet etleo. Mauris vel ex.</p>
 							</div>
 					  </div>
@@ -123,7 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<span class="fa fa-binoculars" aria-hidden="true"></span>
 							</div>
 							<div class="ser-sevice-grid">
-								<h4 class="pb-3">Easy Booking</h4>
+								<h4 class="pb-3">Легкое бронирование</h4>
 							  <p>Duis nisi sapien, elementum et finibus et fermen eget, aliquet etleo. Mauris vel ex.</p>
 							</div>
 						</div>
@@ -134,7 +134,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<span class="fa fa-camera" aria-hidden="true"></span>
 							</div>
 							<div class="ser-sevice-grid">
-								<h4 class="pb-3">Best Packages</h4>
+								<h4 class="pb-3">Лучшие пакеты</h4>
 							  <p>Duis nisi sapien, elementum et finibus et fermen eget, aliquet etleo. Mauris vel ex.</p>
 							</div>
 					  </div>
@@ -151,12 +151,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="overlay-inner py-5">
 		<div class="container py-md-3">
 			<div class="test-info">
-				<h4 class="tittle">Enjoy The Trip</h4>
+				<h4 class="tittle">Наслаждайтесь Поездкой</h4>
 				<p class="mt-3">Duis nisi sapien, elementum finibus fermentum eget, aliquet leo et. Mauris hendrerit vel ex. Quisque vitae luctus massa.
 				Phasellus sed aliquam leo a massa eu fringilla. Integer ultrices finibus sed nisi. in convallis felis dapibus
 				sit amet.</p>
 				<div class="text-left mt-4">
-						<a href="booking.html">Book Now</a>
+						<a href="booking.html">Забронируйте Сейчас</a>
 				</div>
 			</div>
 		</div>
@@ -167,7 +167,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- places -->
 <section class="trav-grids py-5" id="desti">
 	<div class="container py-xl-5 py-lg-3">
-		<h3 class="heading text-capitalize text-center mb-lg-5 mb-4">Tourism Places</h3>
+		<h3 class="heading text-capitalize text-center mb-lg-5 mb-4">Туристические Места</h3>
 		<div class="row">
 			<div class="col-lg-6 mt-4">
 				<div class="grids-tem-one">
@@ -176,7 +176,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/japan.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="col-sm-7 right-cont">
-							<h4 class="mb-2 let mt-sm-0 mt-2 tm-clr">Japan</h4>
+							<h4 class="mb-2 let mt-sm-0 mt-2 tm-clr">Япония</h4>
 							<ul class="d-flex">
 								<li><span class="fa fa-star"></span></li>
 								<li><span class="fa fa-star"></span></li>
@@ -185,7 +185,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<li><span class="fa fa-star"></span></li>
 							</ul>
 							<p class="mt-3">Sed ut perspiciatis unde omnis istes natus error sit volup tatem accusani tium doloremque laudantium.</p>
-							<p class="duration mt-2"><span class="fa fa-clock-o mr-2"></span><strong>Duration</strong> : 2 Days, 3hrs</p>
+							<p class="duration mt-2"><span class="fa fa-clock-o mr-2"></span><strong>Продолжительность</strong> : 2 Дня, 3 Часа</p>
 						</div>
 					</div>
 				</div>
@@ -197,7 +197,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/singapore.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="col-sm-7 right-cont">
-							<h4 class="mb-2 let mt-sm-0 mt-2 tm-clr">Singapore</h4>
+							<h4 class="mb-2 let mt-sm-0 mt-2 tm-clr">Сингапур</h4>
 							<ul class="d-flex">
 								<li><span class="fa fa-star"></span></li>
 								<li><span class="fa fa-star"></span></li>
@@ -206,7 +206,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<li><span class="fa fa-star"></span></li>
 							</ul>
 							<p class="mt-3">Sed ut perspiciatis unde omnis istes natus error sit volup tatem accusani tium doloremque laudantium.</p>
-							<p class="duration mt-2"><span class="fa fa-clock-o mr-2"></span><strong>Duration</strong> : 2 Days, 3hrs</p>
+							<p class="duration mt-2"><span class="fa fa-clock-o mr-2"></span><strong>Продолжительность</strong> : 2 Дня, 3 Часа</p>
 						</div>
 					</div>
 				</div>
@@ -220,7 +220,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/malaysia.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="col-sm-7 right-cont">
-							<h4 class="mb-2 let mt-sm-0 mt-2 tm-clr">Malaysia</h4>
+							<h4 class="mb-2 let mt-sm-0 mt-2 tm-clr">Малайзия</h4>
 							<ul class="d-flex">
 								<li><span class="fa fa-star"></span></li>
 								<li><span class="fa fa-star"></span></li>
@@ -229,7 +229,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<li><span class="fa fa-star"></span></li>
 							</ul>
 							<p class="mt-3">Sed ut perspiciatis unde omnis istes natus error sit volup tatem accusani tium doloremque laudantium.</p>
-							<p class="duration mt-2"><span class="fa fa-clock-o mr-2"></span><strong>Duration</strong> : 2 Days, 3hrs</p>
+							<p class="duration mt-2"><span class="fa fa-clock-o mr-2"></span><strong>Продолжительность</strong> : 2 Дня, 3 Часа</p>
 						</div>
 					</div>
 				</div>
@@ -241,7 +241,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<img src="images/china.jpg" alt="" class="img-fluid">
 						</div>
 						<div class="col-sm-7 right-cont">
-							<h4 class="mb-2 mt-sm-0 mt-2 let tm-clr">China</h4>
+							<h4 class="mb-2 mt-sm-0 mt-2 let tm-clr">Китай</h4>
 							<ul class="d-flex">
 								<li><span class="fa fa-star"></span></li>
 								<li><span class="fa fa-star"></span></li>
@@ -250,7 +250,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<li><span class="fa fa-star"></span></li>
 							</ul>
 							<p class="mt-3">Sed ut perspiciatis unde omnis istes natus error sit volup tatem accusani tium doloremque laudantium.</p>
-							<p class="duration mt-2"><span class="fa fa-clock-o mr-2"></span><strong>Duration</strong> : 2 Days, 3hrs</p>
+							<p class="duration mt-2"><span class="fa fa-clock-o mr-2"></span><strong>Продолжительность</strong> : 2 Дня, 3 Часа</p>
 						</div>
 					</div>
 				</div>
@@ -267,18 +267,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="row footer-top">
 			<div class="col-lg-3 col-sm-6 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Address</h3>
+					<h3>Адрес</h3>
 				</div>
 				<div class="footer-text">
-					<p>Location : 1234 lock, Charlotte, North Carolina, United States</p>
-					<p>Phone : +12 534894364</p>
-					<p>Email : <a href="mailto:info@example.com">info@example.com</a></p>
+					<p>Расположение: 1234 lock, Charlotte, North Carolina, United States</p>
+					<p>Телефон: +12 534894364</p>
+					<p>Электронная почта: <a href="mailto:info@example.com">info@example.com</a></p>
 					<p>Fax : +12 534894364</p>
 				</div>
 			</div>
 			<div class="col-lg-3 col-sm-6 footer-grid_section mt-sm-0 mt-4">
 				<div class="footer-title">
-					<h3>About Us</h3>
+					<h3>О нас</h3>
 				</div>
 				<div class="footer-text">
 					<p>Vivamus magna justo, laci niats eget consectetur sed, conval lis at tellus. Nulla quis lorem ipnt libero.
@@ -293,7 +293,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Travel Places</h3>
+					<h3>Места для путешествий</h3>
 				</div>
 				<div class="row">
 					<ul class="col-6 links">
@@ -315,7 +315,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
 				<div class="footer-title">
-					<h3>Newsletter</h3>
+					<h3>Новостная рассылка</h3>
 				</div>
 				<div class="footer-text">
 					<p>
