--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 			<div class="col-lg-3 col-6">
 				<div class="counter">
 					<span class="fa fa-ship"></span>
-					<<div class="timer count-title count-number number2" data-max="12">10</div>
+					<div class="timer count-title count-number number2" data-max="12">10</div>
 					<p class="count-text text-uppercase">ТУРЫ И ПУТЕШЕСТВИЯ </p>
 				</div>
 			</div>
